Add second API RunCommandWithUrl and default
