# src/docs/swagger.yaml
@@ -1,12 +1,19 @@
 basePath: /
 definitions:
-  agentHttpController.RequestData:
+  agentHttpController.RequestDataForRunCommandByScriptContent:
     properties:
       scriptContent:
+        default: |-
+          #!/bin/bash
+          echo "start"
+          echo "hello yang"
+          echo "end"
         type: string
+    type: object
+  agentHttpController.RequestDataForRunCommandByUrl:
+    properties:
       url:
-        type: string
-      value:
+        default: https://ansys-gateway-development.s3.eu-west-3.amazonaws.com/first_script.sh
         type: string
     type: object
 host: localhost:9001
@@ -34,7 +41,7 @@ paths:
         name: object
         required: true
         schema:
-          $ref: '#/definitions/agentHttpController.RequestData'
+          $ref: '#/definitions/agentHttpController.RequestDataForRunCommandByScriptContent'
       produces:
       - application/json
       responses:
@@ -50,7 +57,35 @@ paths:
           description: Failed to create object
           schema:
             type: string
-      summary: Run command by script content
+      summary: Run command using script content
+  /RunCommandWithUrl:
+    post:
+      consumes:
+      - application/json
+      description: description
+      parameters:
+      - description: param for RunCommandWithUrl
+        in: body
+        name: object
+        required: true
+        schema:
+          $ref: '#/definitions/agentHttpController.RequestDataForRunCommandByUrl'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: The object was created successfully
+          schema:
+            type: string
+        "400":
+          description: Invalid request body
+          schema:
+            type: string
+        "500":
+          description: Failed to create object
+          schema:
+            type: string
+      summary: Run command using url
 securityDefinitions:
   BasicAuth:
     type: basic
